--- a/app/css/additional-styles/custom-fonts.css
+++ b/app/css/additional-styles/custom-fonts.css
@@ -3,4 +3,14 @@
     font-weight: 400;
     font-style: normal;
   }
-  
+
+
+.fraunces-regular {
+  font-family: "Fraunces", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+    "SOFT" 0,
+    "WONK" 0;
+}
